src/App.css
/* ... */
.angel{
  animation: float 5s ease infinite;
}

.pointer {
  position: absolute;
  top: calc(195px * var(--scale));
  width: calc(8px * max(var(--scale), 2));
  height: calc(8px * max(var(--scale), 2));
  animation: pointer 2s ease-in-out infinite;
}

@media (max-width: 680px) {
  .angel {
    left: 30px;
  }
}

/* About Section */
.educationCard{
  flex-grow: .5;
}

.skillCard{
  flex-grow: 1;
  min-height: 225px;
}

.novaIcon {
  position: relative;
  width: calc(64px * max(var(--scale), 2));
  z-index: 2;
  
}

.novaIconShadow {
  position: absolute;
  filter: brightness(0) blur(5px);
  left: 0;
  top: 2%;
  width: calc(64px * max(var(--scale), 2));
  z-index: 1;
}

.portrait {
  position:absolute;
  opacity: 0;
  right: calc(4px * var(--scale) * -1);
  top: calc(80px * var(--scale));
  width: calc(70px * var(--scale));
  height: calc(105px * var(--scale));
  border: 1px solid rgb(from var(--blue) r g b / 95%);
}

@media (max-width: 1024px){
  .portrait {
    opacity: 1;
    top: calc(14px * var(--scale) * -1);
  }
}

.portraitVisible {
  animation: portrait 1s ease forwards;
  animation-delay: .4s;
}

/* Projects Section */
.projectsHeader {
  box-sizing: border-box;
  width: 100%;
}

.pageMenu {
  width: 30%;
}

.rightArrow {
  transform: scaleX(-1);
}

.projectsHeader, .pageMenu {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.mobileProjectTitle {
  display: flex;
  flex-direction: column;
  padding-top: 30px;
  gap: 37px;
  width: calc(var(--baseWidth) - 204px - var(--cardGap));
  align-items: center;
}

.projectGrid {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(3, calc((var(--baseWidth) * var(--scale))/3 - (var(--cardGap) * var(--scale) * 2)/3));
  grid-auto-rows: calc(130px * var(--scale));
  gap: calc(var(--cardGap) * var(--scale));
}

.projectImageIcon {
  width: 100%;
  aspect-ratio: 160/90;
}

@media (max-width: 680px) {
  .projectGrid {
     grid-template-columns: repeat(1, 204px);
     grid-template-rows: repeat(2, 260px);
     justify-content: end;
  }
}

.gridFadeIn {
  animation: fadeIn .3s ease forwards;
}

.projectCardInfoContainer {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  padding: calc(5px * max(var(--scale), 2));
  padding-bottom: calc(7px * max(var(--scale), 2));;
  height: calc(73px * max(var(--scale), 2));
}

.tagContainer {
  padding: calc(1px * max(var(--scale), 2)) 0px;
  display: flex;
  gap: calc(2px * max(var(--scale), 2));
}

.projectTag {
  width: calc(29px * max(var(--scale), 2));
  height: calc(7px * max(var(--scale), 2));
  line-height: calc(6px * max(var(--scale), 2));
  background-color: var(--color);
  color: var(--white);
  font-size: max(10px, calc(5px * var(--scale)));
  text-align: center;
}

.projectButton {
  margin-top: auto;
}

.projectCardDropdown {
  position: absolute;
  box-sizing: border-box;
  top: 0;
  left: 0;
  background-color: rgb(from var(--lightestBlue) r g b / 95%);
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: calc(5px * max(var(--scale), 2));
  transform-origin: top left;
  animation: slideDown .2s ease forwards;
}

.projectDescText {
  font-size: calc(5px * max(var(--scale), 2));
}

.xButton {
  position: absolute;
  transform-origin: center;
  right: 2%;
  top: 0;
}

/* Contact Section */
.contactCard{
  width: calc((var(--baseWidth)/2 - var(--cardGap)) * var(--scale));
}

@media (max-width: 680px) {
  .contactCard {
    width: var(--baseWidth);
  }

  .messageCard {
    height: 430px;
  }
}

.contactInfo{
  display: flex;
  flex-direction: column;
}

.popup {
  top: 10%;
  left: 50%;
  position: fixed;
  width: calc(100px * max(var(--scale), 2));
  height: calc(20px * max(var(--scale), 2));
  line-height: calc(20px * max(var(--scale), 2));
  text-align: center;
  background-color: rgb(from var(--bluishBlack) r g b / 70%); 
  box-shadow: 0px 0px 12px rgb(from var(--bluishBlack) r g b / 100%); 
  animation: popup 3s ease forwards;
}

.footer {
  text-align: center;
  padding-top: calc(var(--topPadding)/2);
}
/* Keyframes */
@keyframes slideDown {
  from {
    transform: scaleY(0);
  } to {
    transform: scaleY(1)
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(80px);
  } to {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes float {
  0% {
    transform: translateY(7%);
  } 50% {
    transform: translateY(-11%);
  } 100% {
    transform: translateY(7%);
  }
}

@keyframes navItem {
  0% {
    transform: scaleX(0);
  } 100% {
    transform: scaleX(100%);
  }
}

@keyframes portrait {
  0% {
    opacity: 0;
  } 100% {
    opacity: 1;
  }
}

@keyframes starPulse {
  0%, 100% {
    box-shadow: 0 0 10px calc(var(--brightness) * .3 * var(--scale))  rgb(from var(--highlight, var(--white)) r g b / 30%);
  }
  50% {
    box-shadow: 0 0 10px calc(var(--brightness) * var(--scale))  rgb(from var(--highlight, var(--white)) r g b / 50%);
  }
}

@keyframes comet {
  from {
    transform: translate(0, 0)
  } to {
    transform: translate(calc(var(--scale) * var(--baseWidth) * 3), calc(var(--scale) * var(--baseWidth) * 3));
  }
}

@keyframes pointer {
  0% {
    transform: translateY(0)
  } 50% {
    transform: translateY(15px)
  } 100% {
    transform: translateY(0px)
  }
}

@keyframes popup {
  0% {
    transform: translate(-50%, -400%);
  } 20% {
    transform: translate(-50%, 0px);
  } 80% {
    transform: translate(-50%, 0px);
  } 100% {
    transform: translate(-50%, -400%);
  }
}

